--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 <link rel="stylesheet" href="cssindex.css">
 <link rel="stylesheet" href="xaichung.css">
-<title>Thanh Binh</title>
+<title>Thanh Bình </title>
 </head>
 <body>
 	<div id="overlay-page" class="d-md-none"></div>
@@ -57,7 +57,7 @@
         <li><a href="blog.html">Blog Trang Sức</a></li>
         <li><a href="Tranggioithieu.html">Thông Tin</a></li>
         <li><a href="lienhe.">Liên Hệ</a></li>
-      </ul>html
+      </ul>
     </nav>
   </div>
 	</header>
